[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/navicella.gd" type="Script" id=1]
[ext_resource path="res://models/modellonavicella2.escn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
flags_no_depth_test = true
flags_fixed_size = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_depth_draw_mode = 1
params_billboard_mode = 1
albedo_color = Color( 1, 0, 0.960784, 1 )

[sub_resource type="QuadMesh" id=11]
material = SubResource( 10 )
size = Vector2( 0.01, 0.01 )

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
vertex_color_use_as_albedo = true
metallic_specular = 0.0

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )
radius = 0.25
height = 0.5
radial_segments = 16
rings = 8

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.458015, 0.992366, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.992188, 1, 0, 1, 1, 1, 0.937255, 0.117647, 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radius = 0.05
height = 0.1
radial_segments = 16
rings = 8

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 0.01, 1 )

[sub_resource type="PlaneMesh" id=8]
size = Vector2( 0.01, 1 )

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 0.01, 1 )

[node name="Navicella" type="KinematicBody"]
collision_mask = 0
script = ExtResource( 1 )

[node name="mirino" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -26.2952 )

[node name="MeshInstance" type="MeshInstance" parent="mirino"]
cast_shadow = 0
mesh = SubResource( 11 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="particelle" type="Spatial" parent="."]

[node name="particleDx" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.0154156, 1.19072 )
emitting = false
amount = 15
lifetime = 0.68
randomness = 0.76
local_coords = false
mesh = SubResource( 3 )
emission_shape = 1
emission_sphere_radius = 0.15
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.46
linear_accel = 7.22
color_ramp = SubResource( 4 )

[node name="particleDxBase" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.0154156, 1.19072 )
amount = 5
lifetime = 0.68
randomness = 0.76
local_coords = false
mesh = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 0.05
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.46
linear_accel = 7.22
color_ramp = SubResource( 4 )

[node name="particleSx" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, -0.0154156, 1.19072 )
emitting = false
amount = 15
lifetime = 0.68
randomness = 0.76
local_coords = false
mesh = SubResource( 3 )
emission_shape = 1
emission_sphere_radius = 0.15
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.46
linear_accel = 7.22
color_ramp = SubResource( 4 )

[node name="particleSxBase" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, -0.0154156, 1.19072 )
amount = 5
lifetime = 0.68
randomness = 0.76
local_coords = false
mesh = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 0.05
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.46
linear_accel = 7.22
color_ramp = SubResource( 4 )

[node name="strisceVelocità1" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
amount = 3
mesh = SubResource( 7 )
emission_shape = 1
emission_sphere_radius = 2.5
direction = Vector3( 0, 0, 1 )
spread = 10.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0

[node name="strisceVelocità2" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.5 )
amount = 12
mesh = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector3( 0, 0, 1 )
spread = 10.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0

[node name="strisceVelocità3" type="CPUParticles" parent="particelle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9 )
emitting = false
amount = 20
mesh = SubResource( 9 )
emission_shape = 1
emission_sphere_radius = 1.5
direction = Vector3( 0, 0, 1 )
spread = 10.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0

[node name="boccaDaFuoco" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00886667, -1.94266 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63575, 5.59542 )
current = true
far = 600.0

[node name="CameraTarget" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55449, 4.47713 )

[node name="modellonavicella2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0.598 )
